--- a/templates/base.html
+++ b/templates/base.html
@@ -59,6 +59,8 @@
     <link rel="stylesheet" type="text/css" href="{% static 'libraries\bower_components\spectrum\css\spectrum.css' %}">
     <!-- Mini-color css -->
     <link rel="stylesheet" type="text/css" href="{% static 'libraries\bower_components\jquery-minicolors\css\jquery.minicolors.css' %}">
+    <!-- radial chart.css -->
+    <link rel="stylesheet" type="text/css" href="{% static 'libraries\assets\pages\chart\radial\css\radial.css' %}">
     <!-- Data Table Css -->
     <link rel="stylesheet" type="text/css" href="{% static 'libraries\bower_components\datatables.net-bs4\css\dataTables.bootstrap4.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'libraries\assets\pages\data-table\css\buttons.dataTables.min.css' %}">
